--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,9 @@
    display: none !important; 
    /* ! Usamos !important para asegurar que sobreescriba otras clases de display de Tailwind si es necesario */
 }
+
+body {
+   display: grid;
+   min-height: 100dvh;
+   grid-template-rows: auto 1fr auto;
+}
