--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,8 @@ body {
    min-height: 100dvh;
    grid-template-rows: auto 1fr auto;
 }
+
+/* Centrado global para todas las columnas de Grid.js */
+.gridjs-table td, .gridjs-table th {
+  text-align: center !important;
+}
