--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
    grid-template-rows: auto 1fr auto;
 }
 
-/* Centrado global para todas las columnas de Grid.js */
+/** Centrado global para todas las columnas de Grid.js */
 .gridjs-table td, .gridjs-table th {
   text-align: center !important;
 }
@@ -25,7 +25,7 @@ body {
   display: none !important;
 }
 
-/* Sidebar colapsado */
+/** Sidebar colapsado */
 .sidebar-collapsed {
   width: 64px !important;
 }
@@ -44,30 +44,18 @@ body {
   width: 48px;
   height: 48px;
   margin: 0 auto;
-  border-radius: 9999px; /* círculo */
+  border-radius: 9999px; /** círculo */
   display: flex !important;
   align-items: center;
 }
 
 .sidebar-collapsed nav ul li a:hover {
-  background-color: #e0e7ff !important; /* azul claro, igual que hover normal */
+  background-color: #e0e7ff !important; /** azul claro, igual que hover normal */
 }
 .sidebar-collapsed nav ul li {
   display: flex;
   justify-content: center;
 }
-
-/* Ajuste del contenido principal cuando el sidebar está colapsado */
-/* .main-expanded {
-  margin-left: 64px !important;
-  transition: margin 0.3s;
-}
-
-@media (max-width: 767px) {
-  .main-expanded {
-    margin-left: 0 !important;
-  }
-} */
 
 .sidebar-collapsed .mt-auto {
   padding-left: 0 !important;
